--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer clerk;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: Montserrat;
+  src: url('/fonts/Montserrat.ttf');
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@theme inline {
+  --font-montserrat: Montserrat
 }
